--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
         <h1>Adventní kalendář</h1>
         <nav>
-            <a href="typykalendaru.html">Typy Kalendářů</a>
-            <a href="../okenka/okenko1.html">Okénko 1</a>
+            <a href="main/typykalendaru.html">Typy Kalendářů</a>
+            <a href="okenka/okenko1.html">Okénko 1</a>
         </nav>
     </header>
     <section>
