--- a/okenka/okenko20.html
+++ b/okenka/okenko20.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Okénko 1</title>
+    <title>Okénko 20</title>
 </head>
 <body>
    <header>
         <nav>
-            <h1>Okénko 1</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+            <h1>Okénko 20</h1>
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
-            <a href="okenko2.html">O okénko dále</a>
+            <a href="okenko21.html">O okénko dále</a>
             <br>
-            <a href="okenko1.html">O Okénko zpátky - není přece</a>
+            <a href="okenko19.html">O Okénko zpátky</a>
         </nav>
    </header>
    <section>
-    <img src="../img/" alt="ucitel/ka">
+    <img src="" alt="">
    </section>
     <footer>
         Autor: Jakub Jezbera
