--- a/okenka/okenko24.html
+++ b/okenka/okenko24.html
@@ -14,10 +14,11 @@
             <a href="okenko24.html">O okénko dále - přece není </a>
             <br>
             <a href="okenko23.html">O Okénko zpátky</a>
+            <img src="../../img/01.jpg" alt="ee">
         </nav>
    </header>
    <section>
-    <img src="" alt="">
+
    </section>
     <footer>
         Autor: Jakub Jezbera
