--- a/okenka/okenko1.html
+++ b/okenka/okenko1.html
@@ -17,7 +17,7 @@
         </nav>
    </header>
    <section>
-    <img src="../img/" alt="ucitel/ka">
+    <img src="../../img/01.jpg" alt="ucitel/ka">
    </section>
     <footer>
         Autor: Jakub Jezbera
