--- a/okenka/okenko21.html
+++ b/okenka/okenko21.html
@@ -17,7 +17,7 @@
         </nav>
    </header>
    <section>
-    <img src="" alt="">
+    <img src="../../img/21.jpg" alt="ucitel/ka">
    </section>
     <footer>
         Autor: Jakub Jezbera
