--- a/okenka/okenko23.html
+++ b/okenka/okenko23.html
@@ -17,7 +17,7 @@
         </nav>
    </header>
    <section>
-    <img src="" alt="">
+    <img src="../../img/23.jpg" alt="ucitel/ka">
    </section>
     <footer>
         Autor: Jakub Jezbera
