--- a/okenka/okenko1.html
+++ b/okenka/okenko1.html
@@ -17,7 +17,7 @@
         </nav>
    </header>
    <section>
-    <img src=".././../img/01.jpg">
+    <img src="../img/01.jpg">
    </section>
     <footer>
         Autor: Jakub Jezbera
