--- a/okenka/okenko12.html
+++ b/okenka/okenko12.html
@@ -17,7 +17,7 @@
         </nav>
    </header>
    <section>
-    <img src="../../img/12.jpg" alt="ucitel/ka">
+    <img src="../img/12.jpg" alt="ucitel/ka">
    </section>
     <footer>
         Autor: Jakub Jezbera
