--- a/okenka/okenko14.html
+++ b/okenka/okenko14.html
@@ -17,7 +17,7 @@
         </nav>
    </header>
    <section>
-    <img src="../../img/14.jpg" alt="ucitel/ka">
+    <img src="../img/14.jpg" alt="ucitel/ka">
    </section>
     <footer>
         Autor: Jakub Jezbera
