--- a/okenka/okenko2.html
+++ b/okenka/okenko2.html
@@ -17,7 +17,7 @@
         </nav>
    </header>
    <section>
-    <img src="../../img/02.jpg" alt="ucitel/ka">
+    <img src="../img/02.jpg" alt="ucitel/ka">
    </section>
     <footer>
         Autor: Jakub Jezbera
