--- a/okenka/okenko6.html
+++ b/okenka/okenko6.html
@@ -18,7 +18,7 @@
         </nav>
    </header>
    <section>
-    <img src="../../img/06.jpg" alt="ucitel/ka">
+    <img src="../img/06.jpg" alt="ucitel/ka">
    </section>
     <footer>
         Autor: Jakub Jezbera
