--- a/okenka/okenko1.html
+++ b/okenka/okenko1.html
@@ -18,6 +18,9 @@
    </header>
    <section>
     <img src="../img/01.jpg">
+        <h2>
+                    Jemu ta poslední řada neprospívá, furt kouká ven jestli nejdou baby z obchodky. Tak aby jste se probral, uděláte další větu.. a ne nebojte ještě nejdou
+        </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
