--- a/okenka/okenko10.html
+++ b/okenka/okenko10.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/10.jpg" alt="ucitel/ka">
+    <h2>
+      A co nemá díru, to nepřeříznu protože bych tam nenašel nic zajimavýho - Najman
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
