--- a/okenka/okenko11.html
+++ b/okenka/okenko11.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/11.jpg" alt="ucitel/ka">
+    <h2>
+        „Nikdy jsem nedopustil, aby škola stála v cestě mému vzdělání.“ —  Mark Twain
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
