--- a/okenka/okenko12.html
+++ b/okenka/okenko12.html
@@ -18,6 +18,10 @@
    </header>
    <section>
     <img src="../img/12.jpg" alt="ucitel/ka">
+    <h2>
+   Vážení, váleni na kavalci ještě z nikoho inženýra neudělalo, tady nejste někde v Pavlovicích - Rejc
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
