--- a/okenka/okenko13.html
+++ b/okenka/okenko13.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/13.jpg" alt="ucitel/ka">
+    <h2>
+        „Pamatuj si, že dokud budeme generálům platit víc než učitelům, nebude na světě mír.“ —  Jan Masaryk
+
+    </h2>
+  
    </section>
     <footer>
         Autor: Jakub Jezbera
