--- a/okenka/okenko14.html
+++ b/okenka/okenko14.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/14.jpg" alt="ucitel/ka">
+    <h2>
+        „Praxe je nejlepší učitelka.“ —  Marcus Tullius Cicero
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
