--- a/okenka/okenko15.html
+++ b/okenka/okenko15.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/15.jpg" alt="ucitel/ka">
+    <h2>
+        „Špatný voják, který svého učitele následuje s nářkem.“ —  Seneca
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
