--- a/okenka/okenko17.html
+++ b/okenka/okenko17.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/17.jpg" alt="ucitel/ka">
+    <h2>
+        „Průměrný učitel vypráví. Dobrý učitel vysvětluje. Výborný učitel ukazuje. Nejlepší učitel inspiruje.“ —  Charles Farrar Browne
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
