--- a/okenka/okenko18.html
+++ b/okenka/okenko18.html
@@ -18,6 +18,10 @@
    </header>
    <section>
     <img src="../img/18.jpg" alt="ucitel/ka">
+    <h2>
+       Tak já jsem Pospíchal, teda ne to je kolega. Já jsem Prokeš Vladímír. Tak vy jste studenti a já jsem učitel. A budeme se asi něco učit, teda někteří. - Prokeš
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
