--- a/okenka/okenko19.html
+++ b/okenka/okenko19.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/19.jpg" alt="ucitel/ka">
+    <h2>
+       Fakt se snažím nebejt rasista ale..
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
