--- a/okenka/okenko2.html
+++ b/okenka/okenko2.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/02.jpg" alt="ucitel/ka">
+    <h2>
+ Čínské děti jsou spotřební zboží - Osčádal
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
