--- a/okenka/okenko20.html
+++ b/okenka/okenko20.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/20.jpg" alt="ucitel/ka">
+    <h2>
+        „Neříkej mi, jaké vzdělání máš. Řekni mi, jak velkou část světa jsi viděl.“ — Neznámý autor
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
