--- a/okenka/okenko21.html
+++ b/okenka/okenko21.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/21.jpg" alt="ucitel/ka">
+    <h2>
+        „Vzdělání je to, co nám zůstane, když zapomeneme všechno, co jsme se naučili ve škole.“ —  Karel Čapek
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
