--- a/okenka/okenko22.html
+++ b/okenka/okenko22.html
@@ -18,6 +18,9 @@
    </header>
    <section>
     <img src="../img/22.jpg" alt="ucitel/ka">
+    <h2>
+        Jako takhle už běžte do pr**** tohle jste brali už čtvrt roku
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
