--- a/okenka/okenko23.html
+++ b/okenka/okenko23.html
@@ -18,6 +18,9 @@
    </header>
    <section>
     <img src="../img/23.jpg" alt="ucitel/ka">
+    <h2>
+        Já tě zbiju, já tě doopravdy zbiju - Mach
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
