--- a/okenka/okenko24.html
+++ b/okenka/okenko24.html
@@ -19,6 +19,9 @@
    </header>
    <section>
     <img src="../img/24.jpg" alt="ucitel/ka">
+    <h2>
+        Když se vám odlepí podrážka u bot. Indické dítě by mělo vrátit výplatu - Osčádal
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
