--- a/okenka/okenko4.html
+++ b/okenka/okenko4.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/04.jpg" alt="ucitel/ka">
+    <h2>
+        Kdo nebude aktivní, bude aktivní u školníka - Kulhavý
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
