--- a/okenka/okenko5.html
+++ b/okenka/okenko5.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/05.jpg" alt="ucitel/ka">
+    <h2>
+       Omlouvám se že sem vám to neopravil o víkendu, lovil jsem ženský - Erlebach
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
