--- a/okenka/okenko6.html
+++ b/okenka/okenko6.html
@@ -19,6 +19,10 @@
    </header>
    <section>
     <img src="../img/06.jpg" alt="ucitel/ka">
+    <h2>
+        Víš co to je trubka? To seš ty když to nevíš
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
