--- a/okenka/okenko7.html
+++ b/okenka/okenko7.html
@@ -18,6 +18,10 @@
    </header>
    <section>
     <img src="../img/07.jpg" alt="ucitel/ka">
+    <h2>
+        „Pro život, ne pro školu se učíme.“ —  Seneca
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
