--- a/okenka/okenko8.html
+++ b/okenka/okenko8.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 8</h1>
         <nav>
-            <h1>Okénko 8</h1>
+            
             <a href="../main/index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko9.html">O okénko dále</a>
@@ -18,6 +19,11 @@
    </header>
    <section>
     <img src="../img/08.jpg" alt="ucitel/ka">
+    <h2>
+     Já potřebuji vyzkoušet, co se z vás dá vytlačit, aniž byste blili krev - Kazda
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
