--- a/okenka/okenko9.html
+++ b/okenka/okenko9.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/09.jpg" alt="ucitel/ka">
+    <h2>
+       Skoro zachráněný pacient je mrtvý pacient - Jaromír Osčádal
+
+
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
