--- a/okenka/okenko16.html
+++ b/okenka/okenko16.html
@@ -18,6 +18,11 @@
    </header>
    <section>
     <img src="../img/16.jpg" alt="ucitel/ka">
+    <h2>
+        „Lidé zaplatí víc, aby byli baveni, než vzdělávání.“ —  Dale Carnegie
+
+        
+    </h2>
    </section>
     <footer>
         Autor: Jakub Jezbera
