save asi finally

--- a/okenka/okenko15.html
+++ b/okenka/okenko15.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 15</h1>
         <nav>
-            <h1>Okénko 15</h1>
+          
             <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko16.html">O okénko dále</a>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/15.jpg" alt="ucitel/ka">
     <h2>
-        „Špatný voják, který svého učitele následuje s nářkem.“ —  Seneca
+        Ježíšek není reálný - Šimůnek
 
 
     </h2>
