--- a/okenka/okenko16.html
+++ b/okenka/okenko16.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 16</h1>
         <nav>
-            <h1>Okénko 16</h1>
+            
             <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko17.html">O okénko dále</a>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/16.jpg" alt="ucitel/ka">
     <h2>
-        „Lidé zaplatí víc, aby byli baveni, než vzdělávání.“ —  Dale Carnegie
+        "WTF" are you writing about? - Poláková
 
         
     </h2>
