--- a/okenka/okenko19.html
+++ b/okenka/okenko19.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 19</h1>
         <nav>
-            <h1>Okénko 19</h1>
+      
             <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko20.html">O okénko dále</a>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/19.jpg" alt="ucitel/ka">
     <h2>
-       Fakt se snažím nebejt rasista ale..
+       Fakt se snažím nebejt rasista ale.. - Kristýna Poláková
 
 
     </h2>
