--- a/okenka/okenko20.html
+++ b/okenka/okenko20.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 20</h1>
         <nav>
-            <h1>Okénko 20</h1>
+          
             <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko21.html">O okénko dále</a>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/20.jpg" alt="ucitel/ka">
     <h2>
-        „Neříkej mi, jaké vzdělání máš. Řekni mi, jak velkou část světa jsi viděl.“ — Neznámý autor
+    Drak není to samý co vodník - Šimůnek
 
 
     </h2>
