--- a/okenka/okenko21.html
+++ b/okenka/okenko21.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 21</h1>
         <nav>
-            <h1>Okénko 21</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+           
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko22.html">O okénko dále</a>
             <br>
@@ -19,9 +20,7 @@
    <section>
     <img src="../img/21.jpg" alt="ucitel/ka">
     <h2>
-        „Vzdělání je to, co nám zůstane, když zapomeneme všechno, co jsme se naučili ve škole.“ —  Karel Čapek
-
-
+       RGB světélka v počítači často vedou k psychickým poruchám - Pospíchal
     </h2>
    </section>
     <footer>
