--- a/okenka/okenko7.html
+++ b/okenka/okenko7.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 7</h1>
         <nav>
-            <h1>Okénko 7</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+     
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko8.html">O okénko dále</a>
             <br>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/07.jpg" alt="ucitel/ka">
     <h2>
-        „Pro život, ne pro školu se učíme.“ —  Seneca
+        Deja vu jakože francouzsky, ne dežo ví - Osčádal
 
     </h2>
    </section>
