--- a/okenka/okenko8.html
+++ b/okenka/okenko8.html
@@ -10,7 +10,7 @@
     <h1>Okénko 8</h1>
         <nav>
             
-            <a href="../main/index.html">Zpátky na Začátek</a>
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko9.html">O okénko dále</a>
             <br>
