--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
         <h1>Adventní kalendář</h1>
         <nav>
             <a href="main/typykalendaru.html">Typy Kalendářů</a>
+            <br>
+            <a href="okenka/okenko14.html">Okénko 14</a>
+            <a href="okenka/okenko5.html">Okénko 5</a>
+            <a href="okenka/okenko22.html">Okénko 22</a>
+            <a href="okenka/okenko10.html">Okénko 10</a>
+            <a href="okenka/okenko2.html">Okénko 2</a>
+            <a href="okenka/okenko19.html">Okénko 19</a>
+            <a href="okenka/okenko7.html">Okénko 7</a>
+            <a href="okenka/okenko20.html">Okénko 20</a>
+            <a href="okenka/okenko9.html">Okénko 9</a>
+            <a href="okenka/okenko17.html">Okénko 17</a>
+            <a href="okenka/okenko23.html">Okénko 23</a>
+            <a href="okenka/okenko4.html">Okénko 4</a>
+            <a href="okenka/okenko12.html">Okénko 12</a>
+            <a href="okenka/okenko21.html">Okénko 21</a>
+            <a href="okenka/okenko6.html">Okénko 6</a>
+            <a href="okenka/okenko13.html">Okénko 13</a>
+            <a href="okenka/okenko24.html">Okénko 24</a>
+            <a href="okenka/okenko8.html">Okénko 8</a>
+            <a href="okenka/okenko15.html">Okénko 15</a>
             <a href="okenka/okenko1.html">Okénko 1</a>
+            <a href="okenka/okenko11.html">Okénko 11</a>
+            <a href="okenka/okenko18.html">Okénko 18</a>
+            <a href="okenka/okenko3.html">Okénko 3</a>
+            <a href="okenka/okenko16.html">Okénko 16</a>
         </nav>
     </header>
     <section>
