--- a/okenka/okenko10.html
+++ b/okenka/okenko10.html
@@ -7,9 +7,11 @@
 </head>
 <body>
    <header>
+           
+    <h1>Okénko 10</h1>
         <nav>
-            <h1>Okénko 10</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+           
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko11.html">O okénko dále</a>
             <br>
