--- a/okenka/okenko11.html
+++ b/okenka/okenko11.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 11</h1>
         <nav>
-            <h1>Okénko 11</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+            
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko12.html">O okénko dále</a>
             <br>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/11.jpg" alt="ucitel/ka">
     <h2>
-        „Nikdy jsem nedopustil, aby škola stála v cestě mému vzdělání.“ —  Mark Twain
+        On tady z toho dělá Afgánistán - Pomikálek
 
 
     </h2>
