--- a/okenka/okenko13.html
+++ b/okenka/okenko13.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 13</h1>
         <nav>
-            <h1>Okénko 13</h1>
+     
             <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko14.html">O okénko dále</a>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/13.jpg" alt="ucitel/ka">
     <h2>
-        „Pamatuj si, že dokud budeme generálům platit víc než učitelům, nebude na světě mír.“ —  Jan Masaryk
+        Nevím co s tím potřebuji pomoct, přestupuji na obchodku - Pospíchal
 
     </h2>
   
