--- a/okenka/okenko14.html
+++ b/okenka/okenko14.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 14</h1>
         <nav>
-            <h1>Okénko 14</h1>
+           
             <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko15.html">O okénko dále</a>
@@ -19,7 +20,7 @@
    <section>
     <img src="../img/14.jpg" alt="ucitel/ka">
     <h2>
-        „Praxe je nejlepší učitelka.“ —  Marcus Tullius Cicero
+        Davaj!! Davaj!!! - Dousková
 
 
     </h2>
