--- a/okenka/okenko17.html
+++ b/okenka/okenko17.html
@@ -7,8 +7,9 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 17</h1>
         <nav>
-            <h1>Okénko 17</h1>
+         
             <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko18.html">O okénko dále</a>
@@ -19,8 +20,7 @@
    <section>
     <img src="../img/17.jpg" alt="ucitel/ka">
     <h2>
-        „Průměrný učitel vypráví. Dobrý učitel vysvětluje. Výborný učitel ukazuje. Nejlepší učitel inspiruje.“ —  Charles Farrar Browne
-
+       Popelář by nezvládl spočítat tuto rovinci ale takový Šimpanz bonobo - Osčádal
 
     </h2>
    </section>
