--- a/okenka/okenko22.html
+++ b/okenka/okenko22.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 22</h1>
         <nav>
-            <h1>Okénko 22</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+    
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko23.html">O okénko dále</a>
             <br>
