--- a/okenka/okenko24.html
+++ b/okenka/okenko24.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 24</h1>
         <nav>
-            <h1>Okénko 24</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+       
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko24.html">O okénko dále - přece není </a>
             <br>
