--- a/okenka/okenko4.html
+++ b/okenka/okenko4.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 4</h1>
         <nav>
-            <h1>Okénko 4</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+          
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko5.html">O okénko dále</a>
             <br>
