--- a/okenka/okenko5.html
+++ b/okenka/okenko5.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 5</h1>
         <nav>
-            <h1>Okénko 5</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+            
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko6.html">O okénko dále</a>
             <br>
