--- a/okenka/okenko9.html
+++ b/okenka/okenko9.html
@@ -7,9 +7,10 @@
 </head>
 <body>
    <header>
+    <h1>Okénko 9</h1>
         <nav>
-            <h1>Okénko 9</h1>
-            <a href="../main/index.html">Zpátky na Začátek</a>
+         
+            <a href="../index.html">Zpátky na Začátek</a>
             <br>
             <a href="okenko10.html">O okénko dále</a>
             <br>
