--- a/okenka/okenko1.html
+++ b/okenka/okenko1.html
@@ -18,7 +18,7 @@
         </nav>
    </header>
    <section>
-    <img src="../img/01.jpg">
+    <img src="../img/01.jpg" alt="ucitel/ka">
         <h2>
                     Jemu ta poslední řada neprospívá, furt kouká ven jestli nejdou baby z obchodky. Tak aby jste se probral, uděláte další větu.. a ne nebojte ještě nejdou
         </h2>
