--- a/okenka/okenko6.html
+++ b/okenka/okenko6.html
@@ -10,11 +10,17 @@
     <h1>Okénko 6</h1>
         <nav>
            
-            <a href="../index.html">Zpátky na Začátek</a>
-            <br>
-            <a href="okenko7.html">O okénko dále</a>
-            <br>
-            <a href="okenko5.html">O Okénko zpátky</a>
+            <menu>
+                <li>
+                <a href="../index.html">Zpátky na Začátek</a>
+                </li>
+                <li>
+                <a href="okenko2.html">O okénko dále</a>
+            </li>
+            <li>
+                <a href="okenko1.html">O Okénko zpátky - není přece</a>
+                </li>
+            </menu>
             
         </nav>
    </header>
