--- a/okenka/okenko1.html
+++ b/okenka/okenko1.html
@@ -9,12 +9,17 @@
    <header>
     <h1>Okénko 1</h1>
         <nav>
-        
+        <menu>
+            <li>
             <a href="../index.html">Zpátky na Začátek</a>
-            <br>
+            </li>
+            <li>
             <a href="okenko2.html">O okénko dále</a>
-            <br>
+        </li>
+        <li>
             <a href="okenko1.html">O Okénko zpátky - není přece</a>
+            </li>
+        </menu>
         </nav>
    </header>
    <section>
