--- a/okenka/okenko10.html
+++ b/okenka/okenko10.html
@@ -11,11 +11,17 @@
     <h1>Okénko 10</h1>
         <nav>
            
-            <a href="../index.html">Zpátky na Začátek</a>
-            <br>
-            <a href="okenko11.html">O okénko dále</a>
-            <br>
-            <a href="okenko9.html">O Okénko zpátky</a>
+            <menu>
+                <li>
+                <a href="../index.html">Zpátky na Začátek</a>
+                </li>
+                <li>
+                <a href="okenko2.html">O okénko dále</a>
+            </li>
+            <li>
+                <a href="okenko1.html">O Okénko zpátky - není přece</a>
+                </li>
+            </menu>
         </nav>
    </header>
    <section>
