--- a/okenka/okenko7.html
+++ b/okenka/okenko7.html
@@ -9,12 +9,17 @@
    <header>
     <h1>Okénko 7</h1>
         <nav>
-     
-            <a href="../index.html">Zpátky na Začátek</a>
-            <br>
-            <a href="okenko8.html">O okénko dále</a>
-            <br>
-            <a href="okenko6.html">O Okénko zpátky</a>
+            <menu>
+                <li>
+                <a href="../index.html">Zpátky na Začátek</a>
+                </li>
+                <li>
+                <a href="okenko2.html">O okénko dále</a>
+            </li>
+            <li>
+                <a href="okenko1.html">O Okénko zpátky - není přece</a>
+                </li>
+            </menu>
         </nav>
    </header>
    <section>
