--- a/okenka/okenko10.html
+++ b/okenka/okenko10.html
@@ -19,7 +19,7 @@
                 <a href="okenko2.html">O okénko dále</a>
             </li>
             <li>
-                <a href="okenko1.html">O Okénko zpátky - není přece</a>
+                <a href="okenko1.html">O Okénko zpátky </a>
                 </li>
             </menu>
         </nav>
