--- a/okenka/okenko4.html
+++ b/okenka/okenko4.html
@@ -15,10 +15,10 @@
                 <a href="../index.html">Zpátky na Začátek</a>
                 </li>
                 <li>
-                <a href="okenko2.html">O okénko dále</a>
+                <a href="okenko5.html">O okénko dále</a>
             </li>
             <li>
-                <a href="okenko1.html">O Okénko zpátky - není přece</a>
+                <a href="okenko3.html">O Okénko zpátky </a>
                 </li>
             </menu>
         </nav>
