--- a/okenka/okenko5.html
+++ b/okenka/okenko5.html
@@ -14,10 +14,10 @@
                 <a href="../index.html">Zpátky na Začátek</a>
                 </li>
                 <li>
-                <a href="okenko2.html">O okénko dále</a>
+                <a href="okenko6.html">O okénko dále</a>
             </li>
             <li>
-                <a href="okenko1.html">O Okénko zpátky - není přece</a>
+                <a href="okenko4.html">O Okénko zpátky </a>
                 </li>
             </menu>
         </nav>
