--- a/okenka/okenko1.html
+++ b/okenka/okenko1.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okénko 1</title>
+    <link rel="stylesheet" href="../css/okno.css">
 </head>
 <body>
    <header>
     <h1>Okénko 1</h1>
+
+    
         <nav>
         <menu>
             <li>
@@ -23,7 +26,7 @@
         </nav>
    </header>
    <section>
-    <img src="../img/01.jpg" alt="ucitel/ka">
+    <img class="img" src="../img/01.jpg" alt="ucitel/ka">
         <h2>
                     Jemu ta poslední řada neprospívá, furt kouká ven jestli nejdou baby z obchodky. Tak aby jste se probral, uděláte další větu.. a ne nebojte ještě nejdou
         </h2>
