--- a/okenka/okenko8.html
+++ b/okenka/okenko8.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Okénko 8</title>
+    <title>Okénko 8/</title>
+    <link rel="stylesheet" href="../css/okno.css">
 </head>
 <body>
    <header>
     <h1>Okénko 8</h1>
         <nav>
-            
             <menu>
                 <li>
                 <a href="../index.html">Zpátky na Začátek</a>
                 </li>
                 <li>
-                <a href="okenko2.html">O okénko dále</a>
+                <a href="okenko9.html">O okénko dále</a>
             </li>
             <li>
-                <a href="okenko1.html">O Okénko zpátky </a>
+                <a href="okenko7.html">O Okénko zpátky</a>
                 </li>
             </menu>
         </nav>
@@ -26,8 +26,7 @@
    <section>
     <img src="../img/08.jpg" alt="ucitel/ka">
     <h2>
-     Já potřebuji vyzkoušet, co se z vás dá vytlačit, aniž byste blili krev - Kazda
-
+       Ten copilot to teda pěkně posral, musíme si to udělat sami - Kazda
 
     </h2>
    </section>
