--- a/okenka/okenko13.html
+++ b/okenka/okenko13.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okénko 13</title>
+    <link rel="stylesheet" href="../css/okno.css">
 </head>
+
 <body>
    <header>
     <h1>Okénko 13</h1>
@@ -15,10 +17,10 @@
                 <a href="../index.html">Zpátky na Začátek</a>
                 </li>
                 <li>
-                <a href="okenko2.html">O okénko dále</a>
+                <a href="okenko14.html">O okénko dále</a>
             </li>
             <li>
-                <a href="okenko1.html">O Okénko zpátky </a>
+                <a href="okenko12.html">O Okénko zpátky </a>
                 </li>
             </menu>
         </nav>
