--- a/okenka/okenko3.html
+++ b/okenka/okenko3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okénko 3</title>
+    <link rel="stylesheet" href="../css/okno.css">
 </head>
 <body>
    <header>
@@ -15,10 +16,10 @@
                 <a href="../index.html">Zpátky na Začátek</a>
                 </li>
                 <li>
-                <a href="okenko5.html">O okénko dále</a>
+                <a href="okenko4.html">O okénko dále</a>
             </li>
             <li>
-                <a href="okenko3.html">O Okénko zpátky </a>
+                <a href="okenko2.html">O Okénko zpátky </a>
                 </li>
             </menu>
         </nav>
