--- a/okenka/okenko7.html
+++ b/okenka/okenko7.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okénko 7</title>
+    <link rel="stylesheet" href="../css/okno.css">
 </head>
 <body>
    <header>
@@ -14,10 +15,10 @@
                 <a href="../index.html">Zpátky na Začátek</a>
                 </li>
                 <li>
-                <a href="okenko2.html">O okénko dále</a>
+                <a href="okenko8.html">O okénko dále</a>
             </li>
             <li>
-                <a href="okenko1.html">O Okénko zpátky</a>
+                <a href="okenko6.html">O Okénko zpátky</a>
                 </li>
             </menu>
         </nav>
